js/js.translator/testData/incremental/invalidation/toplevelProperties/lib2/l2.4.kt
fun testToplevelProperties(): Int {
    return globalValWrapper().toInt() +
            inlineGlobalValWrapper().toInt()
}
